--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -24,6 +24,9 @@
                 <a class="nav-link" href="/users">Users</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/languages">Languages</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/rooms">Rooms</a>
             </li>
         </ul>
