--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -7,6 +7,18 @@
     </div>
     <div class="card-body">
         <div class="table-responsive">
+
+            <!-- Botones para filtrar por rol -->
+            <div class="btn-group d-flex justify-content-center">
+                <a href="/users/consultants" class="btn btn-outline-dark">Consultants</a>
+                <a href="/users/coordinators" class="btn btn-outline-dark">Coordinators</a>
+                <a href="/users/operators" class="btn btn-outline-dark">Operators</a>
+                <a href="/users/technicians" class="btn btn-outline-dark">Technicians</a>
+                <a href="/users/interpreters" class="btn btn-outline-dark">Interpreters</a>
+            </div>  
+
+            <br>
+
             <table class="table table-striped table-bordered table-sm">
                 <thead class="thead-dark">
                     <tr>
@@ -75,13 +87,19 @@
                 </tbody>
             </table>
             <!-- BUTTON: new user -->
-            <div>
+            <div class="text-center">
                 <a href="/users/new" class="btn btn-success">New User</a>
             </div>
         </div>
     </div>
 </div>
 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 
@@ -130,22 +148,8 @@
                     </tr>
                     <% }); %>
                 </tbody>
-            </table>
+            </table>           
         </div>
-
-        <br>
-         <!-- Botones para filtrar por rol -->
-        <h3 class="mb-0" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; font-weight: bold; letter-spacing: 1px;">Filter by Role</h3>
-            <br>
-            <div class="btn-group">
-                <a href="/users/consultants" class="btn btn-outline-dark">Consultants</a>
-                <a href="/users/coordinators" class="btn btn-outline-dark">Coordinators</a>
-                <a href="/users/operators" class="btn btn-outline-dark">Operators</a>
-                <a href="/users/technicians" class="btn btn-outline-dark">Technicians</a>
-                <a href="/users/interpreters" class="btn btn-outline-dark">Interpreters</a>
-            </div>    
-        </div>
-
     </div>
 </div>
 
