--- a/views/users/interpreters.ejs
+++ b/views/users/interpreters.ejs
@@ -9,11 +9,11 @@
             <table class="table table-striped table-bordered table-sm">
                 <thead class="thead-dark">
                     <tr>
-                        <th>ID</th>
-                        <th>Username</th>
-                        <th>Email</th>
-                        <th>Reputation</th>
-                        <th>Actions</th>
+                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">ID</th>
+                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Username</th>
+                        <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Email</th>
+                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Reputation</th>
+                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Actions</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -22,8 +22,8 @@
                         <td><%= interpreter.id %></td>
                         <td><a href="/users/<%= interpreter.id %>" style="color: blue;"><%= interpreter.User.username %></a></td>
                         <td><%= interpreter.User.email %></td>
-                        <td><%= interpreter.reputation.value %></td>
-                        <td>
+                        <td style="text-align: center;"><%= interpreter.reputation.value %></td>
+                        <td style="text-align: center;">
                             <div class="btn-group">
                                 <a href="/users/<%= interpreter.id %>/timeslots" class="btn btn-outline-dark btn-sm btn-white mr-1">TimeSlots</a>
                                 <a href="/users/<%= interpreter.id %>/edit" class="btn btn-outline-dark btn-sm btn-white mr-1">Edit</a>
@@ -39,6 +39,9 @@
 
                 <!-- Botón para crear usuario -->
                 <a href="/users/new" class="btn btn-success">New User</a>
+
+                <!-- Redirección a languages -->
+                <a href="/languages" class="btn btn-secondary">Languages</a>
 
                 <!-- Botón para volver atrás -->
                 <a href="/users" class="btn btn-outline-dark">Back</a>
