--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -92,7 +92,7 @@
 
                     </table>
                     <!-- CAMBIAR RUTA -->
-                    <a href="/editProfile/<%= user.id %>" class="btn btn-primary">Reviews</a>
+                    <a href="/editProfile/<%= user.id %>" class="btn btn-secondary">Reviews</a>
 
                 <% } else { %>
                     <h4 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Likes</h4>
@@ -118,8 +118,48 @@
             </div>
         </div>
 
+        <br>
+
+        <% if (userRole === 'Interpreter') { %>
+            <h4 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">LANGUAGES</h4>
+            <div class="table-responsive">
+                <table class="table table-striped table-bordered table-sm">
+                    
+                    <thead class="thead-dark">
+                        <tr>
+                            <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">ID</th>
+                            <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Language from</th>
+                            <th style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Language to</th>
+                        </tr>
+                    </thead>
+                    
+                    <tbody>
+                        <% user.interpreters.languages.forEach(language => { %>
+                            <tr>
+                                <td style="text-align: center;"><%= language.id %></td>
+                                <td><%= language.language_from %></td>
+                                <td><%= language.language_to %></td>
+                            </tr>
+                        <% }); %>
+                    </tbody>
+                    
+                </table>
+    
+                <div>
+                    <a href="/languages/manage" class="btn btn-success btn-sm">New Language</a>
+                </div>
+    
+            </div>
+           
+
+        <% } %>
+
+        <br>
+        <br>
+
+
         <!-- Botones -->
-        <div class="mt-3">
+        <div class="mt-3" style="text-align: center;">
             <a href="/users/<%= user.id %>/editProfile" class="btn btn-primary">Edit Profile</a>
             <a href="/users/<%= user.id %>/delete" class="btn btn-danger">Delete User</a>
             <a href="javascript:history.go(-1)" class="btn btn-secondary">Back</a>
