--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -39,8 +39,8 @@
                 <tbody>
                     <% users.forEach(user => { %>
                     <tr>
-                        <td style="text-align: center;"><%= user.id %></td>
-                        <td><a href="/users/<%= user.id %>" style="color: blue;"><%= user.username %></a></td>
+                        <td style="text-align: center;"><a href="/users/<%= user.id %>" style="color: blue;"><%= user.id %></a></td>
+                        <td><a href="/users/<%= user.id %>/profile" style="color: blue;"><%= user.username %></a></td>
                         <td><%= user.email %></td>
                         <td style="text-align: center;"><%= user.passwordUpdate.toLocaleDateString() %> <%= user.passwordUpdate.toLocaleTimeString() %></td>
                         <!-- <td><%= user.verifyKeyEmail %></td> -->
@@ -93,66 +93,6 @@
         </div>
     </div>
 </div>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<!-- TABLE: Roles -->
-<div class="card">
-    <div class="card-header">
-        <h2 class="mb-0" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a; text-transform: uppercase; font-weight: bold; letter-spacing: 1px;">Roles</h2>
-    </div>
-    <div class="card-body">
-        <div class="table-responsive">
-            <table class="table table-striped table-bordered table-sm">
-                <thead class="thead-dark">
-                    <tr>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">ID</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Username</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Email</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Admin</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Client</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Consultant</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Coordinator</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Operator</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Technician</th>
-                        <th style="text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Interpreter</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% users.forEach(user => { %>
-                    <tr>
-                        <td style="text-align: center;"><%= user.id %></td>
-                        <td><a href="/users/<%= user.id %>/profile" style="color: blue;"><%= user.username %></a></td>
-                        <td><%= user.email %></td>
-                        <td style="text-align: center;"><% if (user.Admins) { %><span class="badge badge-success">Yes</span><% } %></td>
-                        <td style="text-align: center;"><% if (user.clients) { %><span class="badge badge-success">Yes</span><% } %></td>
-                        <td style="text-align: center;"><% if (user.consultants) { %><span class="badge badge-success">Yes</span><% } %></td>
-                        <td style="text-align: center;"><% if (user.coordinators) { %><span class="badge badge-success">Yes</span><% } %></td>
-                        <td style="text-align: center;"><% if (user.operators) { %><span class="badge badge-success">Yes</span><% } %></td>
-                        <td style="text-align: center;"><% if (user.technicians) { %><span class="badge badge-success">Yes</span><% } %></td>
-                        <td style="text-align: center;"><% if (user.interpreters) { %><span class="badge badge-success">Yes</span><% } %></td>
-                        <!-- <td><%= user.Admins ? 'yes' : '' %></td>
-                        <td><%= user.clients ? 'yes' : '' %></td>
-                        <td><%= user.consultants ? 'yes' : '' %></td>
-                        <td><%= user.coordinators ? 'yes' : '' %></td>
-                        <td><%= user.operators ? 'yes' : '' %></td>
-                        <td><%= user.technicians ? 'yes' : '' %></td>
-                        <td><%= user.interpreters ? 'yes' : '' %></td> -->
-                    </tr>
-                    <% }); %>
-                </tbody>
-            </table>           
-        </div>
-    </div>
-</div>
-
 
 <br>
 <br>
