--- a/views/languages/index.ejs
+++ b/views/languages/index.ejs
@@ -75,7 +75,7 @@
                                 <td style="text-align: center;"><%= language.id %></td>
                                 <td><%= language.language_from %></td>
                                 <td><%= language.language_to %></td>
-                                <td><%= interpreter.id %></td>
+                                <td style="text-align: center;"><%= interpreter.id %></td>
                                 <td><a href="/users/<%= interpreter.id %>/profile" style="color: blue;"><%= interpreter.User.username %></a></td>
                             </tr>
                         <% }); %>
