--- a/views/rooms/booths/delete.ejs
+++ b/views/rooms/booths/delete.ejs
@@ -63,7 +63,7 @@
     </div>
     <div class="form-group">
         <button type="submit" class="btn btn-danger">Confirm deletion</button>
-        <a href="/rooms" class="btn btn-outline-dark">Cancel</a>
+        <a href="javascript:history.go(-1)" class="btn btn-outline-dark">Cancel</a>
     </div>
 </form>
 
