--- a/views/rooms/booths/edit.ejs
+++ b/views/rooms/booths/edit.ejs
@@ -46,6 +46,9 @@
                     <% }); %>
                 </select>
             </div>
+            <div class="card-header" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #4a4a4a;  letter-spacing: 1px;">
+                <b>IMPORTANT!</b> If you modify the language to, all interpreters assigned to this booth will be deleted.
+            </div>
                     
             <!-- Signs (Boolean) -->
             <div class="form-group">
@@ -89,7 +92,7 @@
             <button type="submit" class="btn btn-primary">Save Changes</button>
 
             <!-- Botón para ir atrás -->
-            <a href="/rooms" class="btn btn-outline-dark">Cancel</a>
+            <a href="javascript:history.go(-1)" class="btn btn-outline-dark">Cancel</a>
             
         </form>
         <br>
