--- a/views/rooms/booths/new.ejs
+++ b/views/rooms/booths/new.ejs
@@ -94,7 +94,7 @@
             <button type="submit" class="btn btn-primary">Create Booth</button>
 
             <!-- Botón para volver atrás -->
-            <a href="/rooms" class="btn btn-outline-dark">Cancel</a>
+            <a href="javascript:history.go(-1)" class="btn btn-outline-dark">Cancel</a>
 
         </form>
     </div>
